# vidos

./: .editorconfig  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
server/: Cargo.toml
server/vid-api/: Cargo.toml
server/vid-core/: Cargo.toml
server/vid-core/src/: lib.rs  object.rs  resolution.rs  subtitle.rs  subtitle_translation.rs  time_range.rs  user.rs  video.rs  video_segment.rs
